add redux and google oauth

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-signin-client_id" content="596113568195-prhjvoe318j6gkb4fm44r6kklt7gr58q.apps.googleusercontent.com">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
@@ -28,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
